# Microservices-example

./: .gitignore  README.md  build_services.bat
django_auth/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
django_auth/accounts/: urls.py  views.py
django_auth/auth_project/: settings.py
django_auth/grpc/: grpc_server.py
django_main/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
django_main/django_main/: settings.py
django_main/grpc/: auth_service.proto  generate_proto.py  grpc_client.py
django_main/main_app/: forms.py  views.py
django_main/main_app/templates/main_app/: base.html  dashboard.html  home.html  login.html  register.html
